--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -13,14 +13,49 @@ body
     padding: 0;
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
-    font-size: $font-med;
+    font-size: $font-small;
     font-weight: 300;
     color: $grayishBlue;
+    min-height: 300vh; //min height to scroll to see better. may remove later?
+    overflow-x:hidden;
+
+    @include breakpoint-up(large){
+        font-size: $font-med;
+    }
 
     &.noScroll{
         overflow: hidden;
     }
 
+}
+//text
+h1, h2, h3{
+    font-weight: 300;
+    line-height: 1.15;
+    color: $darkBlue;
+    margin-top: 0;
+}
+
+h1{
+    margin-bottom: 1.5rem;
+    font-size: 2.31rem;
+    @include breakpoint-up(large){
+        font-size: $font-xl;
+    }
+}
+
+h2{
+    font-size: 1.875rem;
+    margin-bottom: 1.5625rem;
+    @include breakpoint-up(large){
+        font-size: 2.25rem;
+        margin-bottom: 2.25rem;
+    }
+}
+        
+p{
+    line-height: 1.5;
+    margin-bottom: 2.25rem;
 }
 
 a, a:visited, a:hover{
@@ -29,7 +64,50 @@ a, a:visited, a:hover{
 
 //spacing
 .container{
-    padding: 0 1.5rem;
+    max-width: 69.375rem;
+    margin: 0 auto;
+
+
+    &--pall{
+        padding-top: 4.5rem;
+        padding-bottom: 4.5rem;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+        @include breakpoint-up(large){
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
+    }
+    &--py{
+        padding-top: 4.5rem;
+        padding-bottom: 4.5rem;
+        @include breakpoint-up(large){
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
+    }
+    &--px{
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
+    &--pt{
+        padding-top: 4.5rem;
+        @include breakpoint-up(large){
+            padding-top: 6rem;
+        }
+    }
+    &--pr{
+        padding-right: 1.5rem;
+    }
+    &--pb{
+        padding-bottom: 4.5rem;
+        @include breakpoint-up(large){
+            padding-bottom: 6rem;
+        }
+    }
+    &--pl{
+        padding-left: 1.5rem;
+    }
 }
 
 
@@ -47,14 +125,37 @@ a, a:visited, a:hover{
     }
 }
 
+//Button styles
 button, .button{
+    position: relative;
+    display: inline-block;
     padding: .875rem 2.1875rem;
-    background: linear-gradient(to right, $limeGreen, $brightCyan);
+    background-image: linear-gradient(to right, $limeGreen, $brightCyan);
     border: 0;
     border-radius: 50px;
     cursor: pointer;
     color:$white;
     font-weight: 400;
+
+    font-size: $font-small;
+    color: $white;
+    transition: opacity 300ms ease-in-out;
+    overflow: hidden;
+
+    &::before{
+        content:"";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0.25);
+        opacity: 0;
+        transition: opacity 150ms ease-in-out;
+    }
+    &:hover::before{
+        opacity: 1;
+    }
 }
 
 .hide-for-mobile{
