--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,10 @@
 @import "variables";
 @import "mixins";
 @import "animations";
+
 @import "global";
 @import "header";
+@import "hero";
+@import "feature";
+@import "article";
+@import "footer";
